spacing issues corrected

--- a/css/index.css
+++ b/css/index.css
@@ -102,6 +102,10 @@ nav {
     font-family: netflix;
     
 }
+button:hover {
+  background-color: #C11119;
+  cursor: pointer;
+}
 
 .dropbtn {
     background-color: transparent;
@@ -130,7 +134,7 @@ nav {
   .dropdown-content {
     display: none;
     position: absolute;
-    min-width: 142px;
+    min-width: 136px;
     font-weight: 900;
     z-index: 1;
     font-size: 13px;
@@ -458,13 +462,11 @@ input {
   .email-address {
     width: 550px;
     font-size: 1rem;
-    line-height: 1.5;
     padding: 15px 10px 15px 15px;
     height: 100%;
     border-radius: 3px;
     margin-top: 20px;
-    line-height: 1.5;
-    border: 0.2px solid rgb(143, 143, 143) ;
+    border: 1px solid rgb(143, 143, 143) ;
     height: 100%;
   }
   
@@ -474,7 +476,7 @@ input {
   }
   .get-started-email {
     width: 210px;
-    padding: 13px 20px 12px 25px;
+    padding: 10px 9px 12px 10px;
     background-color: #E50914;
     color: white;
     border-style: solid;
@@ -484,6 +486,7 @@ input {
     border-radius: calc(0.1875rem);
     border-color: rgba(0, 0, 0, 0);
     align-items: center;
+  
 
   }
 
@@ -501,13 +504,11 @@ input {
   }
   .footer-contents {
     display: flex;
-    align-items: flex-start;
     margin-left: 30px;
   
   }
   .columns {
-    margin-right: 145px;
- 
+ margin-right: 150px;
 
     
   }
@@ -524,6 +525,7 @@ input {
     margin: auto;
     margin-top: 20px;
 
+
   }
 
   .netflix-india {
@@ -533,6 +535,7 @@ input {
     color: rgba(255, 255, 255, 0.7);
     font-size: 0.875rem;
     font-weight: 800;
+
   }
   a {
     color: rgba(255, 255, 255, 0.7);
